cilium/gateway-api/cilium-ipv4-gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium-ipv4
spec:
  controllerName: io.cilium/gateway-controller
  description: Cilium GatewayClass with an IPv4-only LoadBalancer Service
  parametersRef:
    group: cilium.io
    kind: CiliumGatewayClassConfig
    name: cilium-ipv4
    namespace: kube-system
