cilium/gateway-api/cilium-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: kube-system
  labels:
    app.kubernetes.io/name: cilium-gateway
    app.kubernetes.io/part-of: cilium-gateway-api
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.3.112
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.homelab.niekvlam.nl"
      allowedRoutes:
        namespaces:
          from: All
